--- a/references.bib
+++ b/references.bib
@@ -170,3 +170,40 @@ keywords = {Quantified Boolean formula, strongly connected components, 2-CNF, 2-
   biburl    = {https://dblp.org/rec/conf/sat/GanianRS17.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{GanianCSP,
+  author    = {Robert Ganian and
+               M. S. Ramanujan and
+               Stefan Szeider},
+  editor    = {Heribert Vollmer and
+               Brigitte Vall{\'{e}}e},
+  title     = {Combining Treewidth and Backdoors for {CSP}},
+  booktitle = {34th Symposium on Theoretical Aspects of Computer Science, {STACS}
+               2017, March 8-11, 2017, Hannover, Germany},
+  series    = {LIPIcs},
+  volume    = {66},
+  pages     = {36:1--36:17},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2017},
+  url       = {https://doi.org/10.4230/LIPIcs.STACS.2017.36},
+  doi       = {10.4230/LIPIcs.STACS.2017.36},
+  timestamp = {Tue, 03 Nov 2020 08:17:24 +0100},
+  biburl    = {https://dblp.org/rec/conf/stacs/GanianRS17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{HandbookOfSAT,
+  editor    = {Armin Biere and
+               Marijn Heule and
+               Hans van Maaren and
+               Toby Walsh},
+  title     = {Handbook of Satisfiability},
+  series    = {Frontiers in Artificial Intelligence and Applications},
+  volume    = {185},
+  publisher = {{IOS} Press},
+  year      = {2009},
+  isbn      = {978-1-58603-929-5},
+  timestamp = {Wed, 16 Sep 2009 11:21:15 +0200},
+  biburl    = {https://dblp.org/rec/series/faia/2009-185.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
